--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -7,7 +7,7 @@ aux_source_directory(. srcs)
 include_directories(${CONTACTS_SOURCE_DIR}/include)
   
 # 设置生成的库文件的路径
-set(LIBRARY_OUTPUT_PATH ${CONTACTS_SOURCE_DIR}/lib)
+SET(LIBRARY_OUTPUT_PATH ${CONTACTS_SOURCE_DIR}/LIB)
   
 # 生成的库文件
 add_library(persion STATIC ${srcs})
